# universal-build-tools

./: CMakeLists.txt  LICENSE  README.md
libubt/: CMakeLists.txt
libubt/include/ubt/: cached_input_file.hpp  tokenised_file.hpp
libubt/source/ubt/: cached_input_file.cpp  tokenised_file.cpp
ucom/: CMakeLists.txt
ucom/source/: main.cpp
